# AI_Full_Stack_Developer

./: .gitignore  00_Intro_to_Large_Language_Models.ipynb  01_01_Prompting_101.ipynb  01b_Evaluating_and_Iterating_Prompts.ipynb  02_02_Basic_RAG.ipynb  02_Basic_RAG.ipynb  02_RAG_101.ipynb  03_02_RAG_with_VectorStore.ipynb  03_04_Evaluate_RAG.ipynb  03_04_rag_eval_dataset.json  03_1_RAG_with_LlamaIndex.ipynb  04_01_Use_OpenSource_Models.ipynb  04_01_nodes.pkl  04_02_ollama_RAG.py  04_RAG_with_VectorStore.ipynb  05_01.ipynb  05_01_2.ipynb  05_01_3.ipynb  05_01_Crawl_a_Website.ipynb  05_01_Crawl_a_Website_test.ipynb  05_01_FINAL_WORKING_crawl4ai.py  05_01_FINAL_WORKING_crawl4ai_2.ipynb  05_01_FINAL_WORKING_crawl4ai_3.ipynb  05_01_FINAL_WORKING_crawl4ai_4.ipynb  05_01_FINAL_WORKING_crawl4ai_5.ipynb  05_01_FINAL_WORKING_crawl4ai_6.ipynb  05_01_FINAL_WORKING_crawl4ai_7_1.ipynb  05_01_FINAL_WORKING_crawl4ai_7_3.ipynb  05_01_FINAL_WORKING_crawl4ai_8.ipynb  05_01_FINAL_WORKING_crawl4ai_JUPYTER_2.py  05_01_FINAL_WORKING_crawl4ai_LlamaIndex.pkl  05_01_FINAL_WORKING_crawl4ai_LlamaIndex.py  05_01_FINAL_WORKING_trafilatura.py  05_01_llamaindex_understanding.html  05_01_llamaindex_understanding.txt  05_01_test_playwright_HTML_text_BSoup.py  05_01_test_playwright_HTML_text_BSoup1.py  05_01_test_playwright_HTML_text_BSoup2.py  05_01_test_playwright_HTML_text_trafilatura.py  05_01_test_playwright_INNER=VISIBLE_text.py  (+26 more)
Hostinger/neo4j/: docker-compose.yml  neo4j.conf  stack.env.example
Hostinger/supabase/: DEPLOYMENT_CHAT_2025-11-11.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DOCUMENTATION.docx  DEPLOYMENT_DOCUMENTATION.md  DEPLOYMENT_DOCUMENTATION.txt  DEPLOYMENT_DOCUMENTATION_clean.md  FINAL_CONFIGURATION.md  MEMORY_MANAGEMENT.md  PORTS.md  README.md  VERIFIED_IMAGES.md  VOLUMES.md  check-images.sh  check-services.sh  debug-studio.sh  deploy-supabase.sh  deploy.sh  docker-compose.yml  docker-compose_2025-11-12.yml  image-fallbacks.txt  kong.yml  pre-pull-images.sh  reset-and-deploy.sh  setup-kong-config.sh  setup-local-persist.sh  setup-ufw.sh  stack.env.backup.20251111_173949  test-init-scripts.sql  verify-images.sh
Hostinger/supabase/docs/: API-REFERENCE.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  TROUBLESHOOTING.md
Hostinger/supabase/init/: 00-create-supabase-admin.sql  01-initial-schema.sql  02-auth-schema.sql  03-storage-schema.sql  (+2 more)
Python312/: 05_01_Crawl_a_Website.ipynb  05_01_FINAL_WORKING_crawl4ai_7_2.ipynb  05_01_FINAL_WORKING_crawl4ai_8.ipynb  FINAL_WORKING_crawl4ai_JUPYTER.py
(+5 files in other folders)
