[project]
name = "ai-full-stack-developer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.41.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langchain-openrouter>=0.0.1",
    "langchain-qdrant>=0.2.1",
    "llama-index>=0.10.68",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
]
