[project]
name = "ai-full-stack-developer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.41.0",
    "jedi>=0.19.2",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langchain-openrouter>=0.0.1",
    "langchain-qdrant>=0.2.1",
    "llama-index>=0.10.68",
    "llama-index-core>=0.10.68.post1",
    "llama-index-llms-openai>=0.1.27",
    "llama-index-llms-openai-like>=0.1.3",
    "llama-index-llms-openrouter>=0.1.4",
    "llama-index-vector-stores-qdrant>=0.2.17",
    "numpy>=1.26.4",
    "openai>=2.1.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.12.1",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
]
