[project]
name = "ai-full-stack-developer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.4",
    "display>=1.0.0",
    "google>=3.0.0",
    "google-genai>=1.41.0",
    "huggingface-hub[hf-xet]>=0.35.3",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "jedi>=0.19.2",
    "jupyter-client>=8.6.3",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langchain-openrouter>=0.0.1",
    "langchain-qdrant>=0.2.1",
    "llama-index>=0.10.68",
    "llama-index-core>=0.10.68.post1",
    "llama-index-embeddings-huggingface>=0.2.3",
    "llama-index-finetuning>=0.1.12",
    "llama-index-llms-openai>=0.1.27",
    "llama-index-llms-openai-like>=0.1.3",
    "llama-index-llms-openrouter>=0.1.4",
    "llama-index-llms-together>=0.1.3",
    "llama-index-vector-stores-qdrant>=0.2.17",
    "lxml-html-clean>=0.4.3",
    "newspaper4k>=0.9.3.1",
    "numpy>=1.26.4",
    "ollama>=0.6.0",
    "openai>=2.1.0",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.12.1",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
]
